--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <button class="btn btn-outline-success form-btnSubmit" type="submit"><img src="img/icon-search.png" alt=""></button>
         </form>
 
-        <section class="filters">
+        <div class="filters">
             <div class="filter filter-ingredients">
-                <input class="form-control " type="search" class="btn btn-secondary dropdown-toggle"  aria-label="Search" placeholder="Ingredients">
+                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu1" aria-label="Search" placeholder="Ingredients">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                   <li><button class="dropdown-item" type="button">Action</button></li>
                   <li><button class="dropdown-item" type="button">Another action</button></li>
                   <li><button class="dropdown-item" type="button">Something else here</button></li>
                 </ul>
             </div>
             <div class="filter filter-appareil">
-                <input class="form-control " type="search" class="btn btn-secondary dropdown-toggle"  aria-label="Search" placeholder="Appareil">
+                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu2" aria-label="Search" placeholder="Appareil">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                   <li><button class="dropdown-item" type="button">Action</button></li>
@@ -40,15 +40,15 @@
                 </ul>
             </div>
             <div class="filter filter-ustensiles">
-                <input class="form-control " type="search" class="btn btn-secondary dropdown-toggle"  aria-label="Search" placeholder="Ustensiles">
+                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu3" aria-label="Search" placeholder="Ustensiles">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
                   <li><button class="dropdown-item" type="button">Action</button></li>
                   <li><button class="dropdown-item" type="button">Another action</button></li>
                   <li><button class="dropdown-item" type="button">Something else here</button></li>
                 </ul>
             </div>
-        </section>
+        </div>
 
         <section class="listCard">
             <div class="card">
