create cards recipes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="header-title">Les petits plats</h1>
         </header>
         <form class="d-flex form">
-            <input class="form-control form-search" type="search"  aria-label="Search" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
+            <input class="form-control form-search" id="principal-search" type="search"  aria-label="Search" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
             <button class="btn btn-outline-success form-btnSubmit" type="submit"><img src="img/icon-search.png" alt=""></button>
         </form>
 
@@ -51,7 +51,7 @@
         </div>
 
         <section class="listCard">
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-img "></div>
                 <div class="card-body">
                     <div class="row">
@@ -109,13 +109,13 @@
                         <p class="card-description col-6">Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.</p>
                     </div>
                 </div>
-              </div>
+              </div> -->
               
         </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- <script src="./dist/polyfill.bundle.js"></script> -->
-    <script src="./dist/app.bundle.js"></script>
+    <script src="/polyfill.bundle.js"></script>
+    <script src="/app.bundle.js"></script>
 </body>
 </html>
