--- a/index.html
+++ b/index.html
@@ -22,27 +22,37 @@
 
         <div class="filters">
             <div class="filter filter-ingredients">
-                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu1" aria-label="Search" placeholder="Ingredients">
+                <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuIngredients" aria-label="Search" placeholder="Ingredients">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><button class="dropdown-item" type="button">Action</button></li>
-                  <li><button class="dropdown-item" type="button">Another action</button></li>
-                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuIngredients">
+                  <li><button class="dropdown-item" type="button">Lait de coco</button></li>
                 </ul>
             </div>
             <div class="filter filter-appareil">
-                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu2" aria-label="Search" placeholder="Appareil">
+                <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuAppareils" aria-label="Search" placeholder="Appareils">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuAppareils">
+                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Something else here</button></li>
                   <li><button class="dropdown-item" type="button">Action</button></li>
                   <li><button class="dropdown-item" type="button">Another action</button></li>
                   <li><button class="dropdown-item" type="button">Something else here</button></li>
                 </ul>
             </div>
             <div class="filter filter-ustensiles">
-                <input class="form-control btn btn-secondary dropdown-toggle" type="search" id="dropdownMenu3" aria-label="Search" placeholder="Ustensiles">
+                <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuUstensiles" aria-label="Search" placeholder="Ustensiles">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuUstensiles">
+                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Something else here</button></li>
                   <li><button class="dropdown-item" type="button">Action</button></li>
                   <li><button class="dropdown-item" type="button">Another action</button></li>
                   <li><button class="dropdown-item" type="button">Something else here</button></li>
@@ -51,6 +61,65 @@
         </div>
 
         <section class="listCard">
+            <!-- <div class="card">
+                <div class="card-img "></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="card-title col-xl-8 col-sm-12">Limonade de Coco</h5>
+                        <p class="card-time col-xl-4 col-xs-12"><img src="img/icon-time.png" alt=""> 10 min</p>
+                    </div>
+                    <div class="row justify-content-between">
+                        <ul class="card-ingredients col-4">
+                            <li><span class="card-ingredients_name">Lait de coco</span>: <span class="card-ingredients_dose">400ml</span></li>
+                            <li><span class="card-ingredients_name">Jus de citron</span>: <span class="card-ingredients_dose">2</span></li>
+                            <li><span class="card-ingredients_name">Crème de coco</span>: <span class="card-ingredients_dose">4 cuillères</span></li>
+                            <li><span class="card-ingredients_name">Sucre</span>: <span class="card-ingredients_dose">20g</span></li>
+                            <li><span class="card-ingredients_name">Glaçons</span>: <span class="card-ingredients_dose">2</span></li>
+                        </ul>
+                        <p class="card-description col-6">Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.</p>
+                    </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-img "></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="card-title col-xl-8 col-sm-12">Limonade de Coco</h5>
+                        <p class="card-time col-xl-4 col-xs-12"><img src="img/icon-time.png" alt=""> 10 min</p>
+                    </div>
+                    <div class="row justify-content-between">
+                        <ul class="card-ingredients col-4">
+                            <li><span class="card-ingredients_name">Lait de coco</span>: <span class="card-ingredients_dose">400ml</span></li>
+                            <li><span class="card-ingredients_name">Jus de citron</span>: <span class="card-ingredients_dose">2</span></li>
+                            <li><span class="card-ingredients_name">Crème de coco</span>: <span class="card-ingredients_dose">4 cuillères</span></li>
+                            <li><span class="card-ingredients_name">Sucre</span>: <span class="card-ingredients_dose">20g</span></li>
+                            <li><span class="card-ingredients_name">Glaçons</span>: <span class="card-ingredients_dose">2</span></li>
+                        </ul>
+                        <p class="card-description col-6">Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.</p>
+                    </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-img "></div>
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="card-title col-xl-8 col-sm-12">Limonade de Coco</h5>
+                        <p class="card-time col-xl-4 col-xs-12"><img src="img/icon-time.png" alt=""> 10 min</p>
+                    </div>
+                    <div class="row justify-content-between">
+                        <ul class="card-ingredients col-4">
+                            <li><span class="card-ingredients_name">Lait de coco</span>: <span class="card-ingredients_dose">400ml</span></li>
+                            <li><span class="card-ingredients_name">Jus de citron</span>: <span class="card-ingredients_dose">2</span></li>
+                            <li><span class="card-ingredients_name">Crème de coco</span>: <span class="card-ingredients_dose">4 cuillères</span></li>
+                            <li><span class="card-ingredients_name">Sucre</span>: <span class="card-ingredients_dose">20g</span></li>
+                            <li><span class="card-ingredients_name">Glaçons</span>: <span class="card-ingredients_dose">2</span></li>
+                        </ul>
+                        <p class="card-description col-6">Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.Découper le thon en dés, mettre dans un plat et recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.</p>
+                    </div>
+                </div>
+              </div> -->
               
         </section>
     </main>
