fonctionnality search filtre

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button class="btn btn-outline-success form-btnSubmit" type="submit"><img src="img/icon-search.png" alt=""></button>
         </form>
 
-        <div class="tags">
+        <div class="tags" id="tags">
             <!-- <span class="tags-tag">coco</span> -->
         </div>
 
