fonctionnality filter tag

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
             <div class="filter filter-ingredients">
                 <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuIngredients" aria-label="Search" placeholder="Ingredients">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuIngredients">
+                <ul class="dropdown-menu dropdown-ingredients" aria-labelledby="dropdownMenuIngredients">
                   <!-- <li><button class="dropdown-item" type="button">Lait de coco</button></li> -->
                 </ul>
             </div>
             <div class="filter filter-appareil">
                 <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuAppareils" aria-label="Search" placeholder="Appareils">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuAppareils">
+                <ul class="dropdown-menu dropdown-appareils" aria-labelledby="dropdownMenuAppareils">
                 </ul>
             </div>
             <div class="filter filter-ustensiles">
                 <input class="form-control btn btn-secondary dropdown-toggle input-filter" type="search" id="dropdownMenuUstensiles" aria-label="Search" placeholder="Ustensiles">
                 <div class="filter-btn"><i class="fas fa-chevron-down"></i></div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuUstensiles">
+                <ul class="dropdown-menu dropdown-ustensiles" aria-labelledby="dropdownMenuUstensiles">
                 </ul>
             </div>
         </div>
