--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
         </div>
 
-        <section class="listCard">              
+        <section class="listCard">  
+            <p class="listCard--noCard">Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.</p>            
         </section>
     </main>
 
